# my_llama_plugin

./: Package.swift  README.md  pubspec.yaml
Sources/LlamaKit/: LlamaKit.swift
android/: build.gradle.kts  settings.gradle
android/src/main/: AndroidManifest.xml  CMakeLists.txt
android/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
android/src/main/kotlin/com/example/my_llama_plugin/: MyLlamaNative.kt  MyLlamaPlugin.kt
android/src/test/kotlin/com/example/my_llama_plugin/: MyLlamaPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/my_llama_plugin_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: my_llama_plugin.podspec
ios/Classes/: LlamaBridge.h  LlamaBridge.mm  LlamaEngine.cpp  LlamaEngine.hpp  MyLlamaPlugin.swift  module.modulemap
lib/: my_llama_plugin.dart  my_llama_plugin_method_channel.dart  my_llama_plugin_platform_interface.dart
test/: my_llama_plugin_method_channel_test.dart  my_llama_plugin_test.dart
